<resources>
    <string name="app_name">Portfolio</string>
    <string name="my_portfolio_app">My Portfolio App</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk" translatable="false">Stock Hawk</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="make_you_app_material">Make you app Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone" translatable="false">Capstone</string>
    <string name="to_be_implemented">%s will be implemented soon.</string>
</resources>
